--- a/scss/main.scss
+++ b/scss/main.scss
@@ -20,9 +20,9 @@
 /*---------------------------------*/
 /* $Globel
 -----------------------------------*/
-$CVprimary: #4e4f95;
-$CVsecondary: #c87db4;
-$CVthird: #e881a7;
+$CVprimary: #a1c4fd;
+$CVsecondary: #c2e9fb;
+$CVthird: #373F51;
 $CVblack: #484848;
 /*---------------------------------*/
 /* $Elements
