--- a/scss/main.scss
+++ b/scss/main.scss
@@ -29,6 +29,7 @@ $CVblack: #484848;
 -----------------------------------*/
 *{
 	position: relative;
+	font-family: 'Microsoft JhengHei', 'Raleway', -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
 }
 .bg{
 	position: fixed;
@@ -113,7 +114,6 @@ $CVblack: #484848;
 	box-sizing: border-box;
 	font-size: 14px;
 	font-weight: 400;
-	font-family: 'Raleway', 'roboto', arial, sans-serif;
 	letter-spacing: 0;
 	color: $CVblack;
 	&_primary{
@@ -172,7 +172,6 @@ $CVblack: #484848;
 .subTitle{
 	font-size: 48px;
 	font-weight: 900;
-	font-family: 'Raleway', 'roboto', arial, sans-serif;
 	margin-top: 24px;
 	margin-bottom: 24px;
 	text-align: center;
@@ -269,7 +268,6 @@ $CVblack: #484848;
 		.popup-menu_item{
 			display: block;
 			text-align: center;
-			font-family: 'Raleway', 'Helvetica', 'roboto', arial, sans-serif;
 			font-size: 40px;
 			font-weight: 600;
 			color: $CVblack;
@@ -494,7 +492,6 @@ $CVblack: #484848;
 			}
 			&_title{
 				color: $CVthird;
-				font-family: 'Raleway', 'roboto', arial, sans-serif;
 				margin-top: 0;
 				margin-bottom: 8px;
 			}
@@ -596,8 +593,23 @@ $CVblack: #484848;
 				margin-bottom: 24px;
 				width: calc(100% - 24px);
 			}
+			&_title{
+				font-size: 22px;
+				margin-bottom: 1.5;
+				font-weight: bold;
+				color: $CVthird;
+				span{
+					margin-left: 10px;
+					font-size: 16px;
+				}
+			}
 			&_text{
 				margin: 0;
+				margin-bottom: 10px;
+			}
+			&_position{
+				font-size: 14px;
+				line-height: 1.5;
 			}
 			&:before{
 				content: "";
@@ -657,7 +669,6 @@ $CVblack: #484848;
 			}
 			&_title{
 				font-size: 40px;
-				font-family: 'Raleway', 'roboto', arial, sans-serif;
 				font-weight: bold;
 				color: $CVblack;
 				@media screen and (max-width: 768px) {
@@ -713,7 +724,8 @@ $CVblack: #484848;
 			display: inline-block;
 			background-color: transparent;
 			border: 1px solid white;
-			color: white;
+			color: $CVthird;
+			font-weight: bold;
 			vertical-align: middle;
 			width: 100%;
 		}
@@ -723,7 +735,7 @@ $CVblack: #484848;
 		textarea:focus{
 			outline: 0;
 			box-shadow: none;
-			border: 1px solid $CVthird;
+			border: 3px solid $CVthird;
 		}
 		textarea{
 			resize: none;
