--- a/scss/main.scss
+++ b/scss/main.scss
@@ -444,6 +444,8 @@ $CVblack: #484848;
 		line-height: 40px;
 		color: $CVblack;
 		margin-bottom: 24px;
+		text-align: left;
+		letter-spacing: 1px;
 	}
 	&_name{
 		color: $CVblack;
