--- a/css/main.css
+++ b/css/main.css
@@ -882,6 +882,7 @@
   font-size: 40px;
   font-weight: bold;
   color: #484848;
+  background-color: rgba(255, 255, 255, 0.5);
 }
 
 @media screen and (max-width: 768px) {
@@ -890,6 +891,7 @@
     line-height: 32px;
     margin-top: 0;
     margin-bottom: 8px;
+    background-color: inherit;
   }
 }
 
