--- a/scss/main.scss
+++ b/scss/main.scss
@@ -487,11 +487,15 @@ $CVblack: #484848;
 			padding-left: 48px;
 			background-color: white;
 			border-radius: 4px;
-			box-shadow: 0 3px 10px rgba(0,0,0,0.5);
+			box-shadow: 0 10px 5px -5px rgba(0, 0, 0, 0.1);
 			transition: all .3s;
 			@media screen and (max-width:768px) {
 				padding: 24px;
 				padding-top: 48px;
+				box-shadow: 0 3px 10px rgba(0,0,0,0.5);
+				&:hover{
+					box-shadow: none;
+				}
 			}
 			&_title{
 				color: $CVthird;
@@ -502,7 +506,7 @@ $CVblack: #484848;
 				margin: 0;
 			}
 			&:hover{
-				box-shadow: 0 10px 5px -5px rgba(0, 0, 0, 0.1);
+				box-shadow: 0 3px 10px rgba(0,0,0,0.5);
 			}
 		}
 		&_icon{
