--- a/css/main.css
+++ b/css/main.css
@@ -614,8 +614,8 @@
   padding-left: 48px;
   background-color: white;
   border-radius: 4px;
-  -webkit-box-shadow: 0 3px 10px rgba(0, 0, 0, 0.5);
-          box-shadow: 0 3px 10px rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: 0 10px 5px -5px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 10px 5px -5px rgba(0, 0, 0, 0.1);
   -webkit-transition: all .3s;
   transition: all .3s;
 }
@@ -624,6 +624,12 @@
   .skill_card_inner {
     padding: 24px;
     padding-top: 48px;
+    -webkit-box-shadow: 0 3px 10px rgba(0, 0, 0, 0.5);
+            box-shadow: 0 3px 10px rgba(0, 0, 0, 0.5);
+  }
+  .skill_card_inner:hover {
+    -webkit-box-shadow: none;
+            box-shadow: none;
   }
 }
 
@@ -638,8 +644,8 @@
 }
 
 .skill_card_inner:hover {
-  -webkit-box-shadow: 0 10px 5px -5px rgba(0, 0, 0, 0.1);
-          box-shadow: 0 10px 5px -5px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 0 3px 10px rgba(0, 0, 0, 0.5);
+          box-shadow: 0 3px 10px rgba(0, 0, 0, 0.5);
 }
 
 .skill_card_icon {
